src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Developers__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Developers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <summarizedField>EmployeeSkill__c.Assigned_Time__c</summarizedField>
        <summaryForeignKey>EmployeeSkill__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Hight</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Duration__c</fullName>
        <formula>TEXT ( IF (  (MONTH(Today()) +12 - MONTH(  Start_Date__c ))&gt;=12, YEAR(Today())-YEAR( Start_Date__c ), YEAR(Today())-YEAR(  Start_Date__c ) -1)) &amp; &quot; Years &quot; &amp;

TEXT ( IF (  (MONTH(Today()) +12 - MONTH(Start_Date__c ))&gt;=12,  (MONTH(Today()) +12 - MONTH(Start_Date__c  ))-12, (MONTH(Today()) +12 - MONTH(Start_Date__c  )))) &amp; &quot; Month&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Owner</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Projects Owner</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_s__c</fullName>
        <defaultValue>0</defaultValue>
        <label>QA’s</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team_Members__c</fullName>
        <label>Team Members</label>
        <summaryForeignKey>EmployeeSkill__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tema_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tema Lead</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Projects (Tema Lead)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>